data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_476.wast
;; 7. **Test Description**: Implement a `loop` containing a `br` instruction that improperly unwinds the stack, causing the loop to never progress or exit.    **Constraint**: Validating the correct stack unwinding process.    **Infinite Loop Relevance**: Ensures that stack unwinding errors do not lead to perpetual looping.

(assert_invalid
  (module 
    (func $improper-stack-unwind (result i32)
      (loop (result i32) 
        (i32.const 1)
        br 0
      )
    )
  )
  "type mismatch"
)